--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ permalink: /404.html
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Loading..</title>
+  <title>Loading - not arriving.  It's BROKEN</title>
 </head>
 <body style='background:black'>
   <script>
