update index in root

--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
   <meta charset='utf-8'>
   <!-- Basic -->
-  <meta name='author' content='Devine Lu Linvega'>
-  <meta name='description' content='The Nataniev Library.'/>
-  <meta name='keywords' content='Aliceffekt, Traumae, Devine Lu Linvega, Lietal, Oquonie, Verreciel, Nataniev, Oscean, Solarpunk' />
+  <meta name='author' content='Andrew Culture'>
+  <meta name='description' content='The Andrew Culture Library.'/>
+  <meta name='keywords' content='testing stuff,Andrew' />
   <meta name='license' content='name=BY-NC-SA(4.0), url=https://creativecommons.org/licenses/by-nc-sa/4.0/'/>
-  <meta name='thumbnail' content='https://wiki.xxiivv.com/media/services/thumbnail.jpg' />
+  <meta name='thumbnail' content='https://stonk.info/media/services/thumbnail.jpg' />
   <!-- Twitter -->
   <meta name='twitter:card' content='summary'>
-  <meta name='twitter:site' content='@neauoire'>
-  <meta name='twitter:title' content='The Nataniev Library'>
-  <meta name='twitter:description' content='The digital playground and documentation for the projects of Devine Lu Linvega.'>
+  <meta name='twitter:site' content='@andrew_culture'>
+  <meta name='twitter:title' content='Andrew Culture'>
+  <meta name='twitter:description' content='AKA Mawhrin Skel, AKA Andrew Laws. Musician, and patient anarcho punk parent. Making noise with Dystopian Sound Collective, These Are End Times & Mawhrin Skel.'>
   <meta name='twitter:creator' content='@neauoire'>
-  <meta name='twitter:image' content='https://wiki.xxiivv.com/media/services/rss.jpg'>
+  <meta name='twitter:image' content='https://stonk.info/media/services/rss.jpg'>
   <!-- Facebook -->
-  <meta property='og:title' content='The Nataniev Library' />
+  <meta property='og:title' content='Andrew Culture' />
   <meta property='og:type' content='article' />
-  <meta property='og:url' content='http://wiki.xxiivv.com/' />
-  <meta property='og:image' content='https://wiki.xxiivv.com/media/services/rss.jpg' />
-  <meta property='og:description' content='The digital playground and documentation for the projects of Devine Lu Linvega.' /> 
-  <meta property='og:site_name' content='XXIIVV' />
+  <meta property='og:url' content='https://www.facebook.com/AndrewCultureWrites/' />
+  <meta property='og:image' content='https://stonk.info/media/services/rss.jpg' />
+  <meta property='og:description' content='Writer, musician, parent, consumer of food.' />
+  <meta property='og:site_name' content='Andrew Culture' />
 
   <script type='text/javascript' src='scripts/lib/helpers.js'></script>
   <script type='text/javascript' src='scripts/lib/runic.js'></script>
@@ -41,13 +41,13 @@
   <script type='text/javascript' src='scripts/types/forecast.js'></script>
   <script type='text/javascript' src='scripts/types/yleta.js'></script>
   <script type='text/javascript' src='scripts/types/yletaodeta.js'></script>
-  
+
 
   <script type='text/javascript' src='scripts/viz/viz.js'></script>
   <script type='text/javascript' src='scripts/viz/activity.js'></script>
   <script type='text/javascript' src='scripts/viz/bar.js'></script>
   <script type='text/javascript' src='scripts/viz/balance.js'></script>
-  
+
   <script type='text/javascript' src='scripts/riven/riven.js'></script>
 
   <script type='text/javascript' src='scripts/riven/nodes/model/mouse.js'></script>
@@ -56,7 +56,7 @@
   <script type='text/javascript' src='scripts/riven/nodes/model/database.js'></script>
   <script type='text/javascript' src='scripts/riven/nodes/model/table.js'></script>
   <script type='text/javascript' src='scripts/riven/nodes/model/map.js'></script>
-  
+
   <script type='text/javascript' src='scripts/riven/nodes/controller/template.js'></script>
   <script type='text/javascript' src='scripts/riven/nodes/controller/journal.js'></script>
   <script type='text/javascript' src='scripts/riven/nodes/controller/calendar.js'></script>
@@ -89,7 +89,7 @@
   <link rel='stylesheet' type='text/css' href='links/main.css'/>
   <link rel='alternate'  type='application/rss+xml' title='Feed' href='links/rss.xml' />
 
-  <title>Oscean</title>
+  <title>Stonk</title>
 </head>
 <body>
   <script>
